2003-10-15  Brian Warner  <warner@lothar.com>

	* twisted/internet/defer.py: add some optional debug code, enabled
	with defer.Deferred.debug=True . If active, it will record a stack
	trace when the Deferred is created, and another when it is first
	invoked. AlreadyCalledErrors will be given these two stack traces,
	making it slightly easier to find the source of the problem.

2003-10-15  Christopher Armstrong  <radix@twistedmatrix.com>

	* .: Releasing Twisted 1.1.0alpha2 (alpha1 was dead in the water).

2003-10-15  Brian Warner  <warner@lothar.com>

	* setup.py: remove cReactor/ to the sandbox. Closes issue318.

2003-10-14  Itamar Shtull-Trauring  <itamar@sheriffpony>

	* twisted/web/static.py: registry no longer has support for
	getting services based on their interfaces.

2003-10-14  Christopher Armstrong  <radix@twistedmatrix.com>

	* .: Releasing Twisted 1.1.0alpha1.

2003-10-13  Bob Ippolito  <bob@redivi.com>

	* doc/howto/choosing-reactor.xhtml:
	Added cfreactor/Cocoa information.

	* doc/examples/cocoaDemo:
	Removed, replaced by doc/examples/Cocoa cfreactor demos.

	* doc/examples/Cocoa:
	Moved from sandbox/etrepum/examples/PyObjC, cleaned up.

	* twisted/internet/cfsupport, twisted/internet/cfreactor.py:
	Moved from sandbox/etrepum, cleaned up.

	* twisted/application/app.py:
	Added 'cf' -> twisted.internet.cfreactor to reactorTypes

	* setup.py:
	sys.platform=='darwin' - build cfsupport, do not build cReactor.

	* INSTALL:
    Changed URL of pimp repository to shorter version.

2003-10-12  Jp Calderone  <exarkun@twistedmatrix.com>

	* bin/tktwistd, twisted/scripts/tktwistd.py, doc/man/tktwistd.1:
	Removed.

2003-10-12  Itamar Shtull-Trauring  <itamar@sheriffpony>

	* twisted/spread/pb.py: Perspective Broker no longer sends
	detailed tracebacks over the wire unless the "unsafeTracebacks"
	attribute is set of the factory.

2003-10-02  Jp Calderone  <exarkun@twistedmatrix.com>

	* setup.py, twisted/test/test_dir.py, twisted/python/_c_dir.c: